--- a/课程内容.md
+++ b/课程内容.md
@@ -85,7 +85,7 @@
 ### 制定宪法的机构和附属制度
 * **伊藤博文** 1882年3月 —— 1883年8月前往西欧从事宪法考查 </br>
       1884年，伊藤在宫中设立制度取调局，负责起草宪法（在宫内设立宪法起草机构是为了利用皇族在国民内心的特殊地位，减少宪法推行时的阻碍）
-* 对皇室和华族进行制度整备，加固皇室的基础，**1884年7月**通过《华族令》，在原来的华族基础上，士族和平民获得了被授予绝味的权利，增加了新的贵族阶级，**成为贵族院的基础**（贵族院设立的原因是防止集体狂乱）
+* 对皇室和华族进行制度整备，加固皇室的基础，**1884年7月**通过《华族令》，在原来的华族基础上，士族和平民获得了被授予绝味的权利，增加了新的贵族阶级，**成为贵族院的基础**（贵族院设立的原因是防止集体狂乱)
 * 整备官僚制度，形成近代化的内阁
 * 1887年起，在帝国大学实行高等文官考试，合格者可直接进入政府机构担任文官，扩大了人才选拔的来源与统治基础
 ### 明治宪法的特点
@@ -97,3 +97,6 @@
     * 反映国民意愿的众议院受到与之同等地位的贵族院牵制，议会的权限被限定于 **“协参”**
     * 军队统帅权的独立
 ***
+
+## 议会政治的确立
+### 贵族院
